Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/forwardRef/TestEnum1.out
TestEnum1.java:11:39: compiler.err.illegal.enum.static.ref
TestEnum1.java:12:40: compiler.err.illegal.enum.static.ref
2 errors
